# kafka_email_consumer

./: Cargo.toml  README.md
src/: consumer.rs  email_client.rs  producer.rs  utils.rs
